[workspace]
members = ["cli", "cron", "plugin", "programs/*", "relayer", "sdk", "utils"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "1.0.0-alpha.3"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://sablier.dev"
repository = "https://github.com/sablier-xyz/sablier"
documentation = "https://docs.sablier.dev"
keywords = ["solana"]

[workspace.dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
base64 = "~0.21"
serde = "1.0"
static-pubkey = "1.0.3"
chrono = { version = "0.4.19", default-features = false }
sablier-thread-program = { path = "./programs/thread", version = "=1.0.0-alpha.3" }
sablier-cron = { path = "./cron", version = "=1.0.0-alpha.3" }
sablier-network-program = { path = "./programs/network", version = "=1.0.0-alpha.3" }
sablier-relayer-api = { path = "./relayer/api", version = "=1.0.0-alpha.3" }
sablier-plugin-utils = { path = "./plugin/utils", version = "=1.0.0-alpha.3" }
sablier-utils = { path = "./utils", version = "=1.0.0-alpha.3" }
sablier-webhook-program = { path = "./programs/webhook", version = "=1.0.0-alpha.3" }
anyhow = "1.0.61"
bincode = "1.3.3"
bzip2 = "0.4"
clap = { version = "4.4.18" }
dirs-next = "2.0.0"
indicatif = "0.17"
reqwest = "0.11.14"
serde_json = "1.0.79"
solana-client = "=1.18.12"
solana-cli-config = "=1.18.12"
solana-sdk = "=1.18.12"
solana-account-decoder = "=1.18.12"
solana-quic-client = "=1.18.12"
solana-logger = "=1.18.12"
solana-program = "=1.18.12"
solana-geyser-plugin-interface = "=1.18.12"
solana-zk-token-sdk = "=1.18.12"
spl-associated-token-account = "1.1.1"
spl-token = "~3.5.0"
tar = "0.4"
thiserror = "1.0.30"
termcolor = "1.2.0"
cargo_metadata = "=0.18.1"
nom = "~7"
log = "0.4"
pyth-sdk-solana = "0.10.0"
tokio = "1.18.4"
futures = "0.3.26"
version = "3.0.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
rayon = "1.7.0"
regex = "1.7.1"
async-trait = "0.1.64"
rustc_version = "0.4.0"
bytemuck = "1.4.0"
