[workspace]
members = ["cli", "cron", "plugin", "programs/*", "relayer", "sdk", "utils"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://sablier.dev"
repository = "https://github.com/sablier-xyz/sablier"
documentation = "https://docs.sablier.dev"
keywords = ["solana"]

[workspace.dependencies]
actix-cors = "0.6.5"
actix-web = "4.9.0"
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
anyhow = "1.0"
base64 = "~0.21"
bincode = "1.3"
bytemuck = "1.17.1"
bzip2 = "0.4"
cargo_metadata = "=0.18.1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5" }
dirs-next = "2.0.0"
futures = "0.3"
indicatif = "0.17"
log = "0.4"
nom = "~7"
proc-macro2 = "1.0"
pyth-solana-receiver-sdk = "0.3.1"
quote = "1.0"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = "0.11"
rustc_version = "0.4"
sablier-cron = { path = "./cron", version = "=1.0.1" }
sablier-network-program = { path = "./programs/network", version = "=1.0.1" }
sablier-plugin-utils = { path = "./plugin/utils", version = "=1.0.1" }
sablier-relayer-api = { path = "./relayer/api", version = "=1.0.1" }
sablier-thread-program = { path = "./programs/thread", version = "=1.0.1" }
sablier-utils = { path = "./utils", version = "=1.0.1" }
sablier-webhook-program = { path = "./programs/webhook", version = "=1.0.1" }
serde = "1.0"
serde_json = "1.0"
solana-account-decoder = "=1.18.22"
solana-cli-config = "=1.18.22"
solana-client = "=1.18.22"
solana-geyser-plugin-interface = "=1.18.22"
solana-logger = "=1.18.22"
solana-program = "=1.18.22"
solana-quic-client = "=1.18.22"
solana-sdk = "=1.18.22"
solana-zk-token-sdk = "=1.18.22"
spl-associated-token-account = "1.1.3"
spl-token = "~3.5.0"
static-pubkey = "1.0.3"
syn = "2.0"
tar = "0.4"
termcolor = "1.4"
thiserror = "1.0"
tokio = "1.40"
version = "3.0"
