[package]
name = "sablier-cli"
version.workspace = true
description = "Command line interface for Sablier"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true
build = "build.rs"

[dependencies]
anchor-lang.workspace = true
anchor-spl = { features = ["mint", "token"], workspace = true }
anyhow.workspace = true
bincode.workspace = true
bzip2.workspace = true
clap = { workspace = true, features = ["derive", "cargo"] }
sablier-cron.workspace = true
sablier-network-program = { workspace = true, features = ["no-entrypoint"] }
sablier-plugin-utils.workspace = true
sablier-thread-program = { workspace = true, features = ["no-entrypoint"] }
sablier-utils.workspace = true
chrono = { workspace = true, features = ["alloc"] }
dirs-next.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-client.workspace = true
solana-cli-config.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
tar.workspace = true
thiserror.workspace = true
termcolor.workspace = true

[[bin]]
name = "sablier"
path = "src/main.rs"

[build-dependencies]
cargo_metadata.workspace = true
