[package]
name = "sablier-cron"
version.workspace = true
description = "A cron expression parser that's safe to use in the Solana runtime"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
name = "sablier_cron"

[dependencies]
chrono = { workspace = true, features = ["alloc"] }
nom.workspace = true
