[package]
name = "clockwork_plugin"
version = "2.0.18"
# this needs to match whatever solana uses!
rust-version = "1.60.0"
edition = "2021"
description = "Clockwork plugin for Solana validators"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/plugin"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "clockwork_plugin"

[dependencies]
anchor-lang = "0.29.0"
async-trait = "0.1.64"
bincode = "1.3.3"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-cron = { path = "../cron", version = "=2.0.18" }
clockwork-network-program = { path = "../programs/network", version = "=2.0.18" }
clockwork-plugin-utils = { path = "utils", version = "=2.0.18" }
clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.18" }
clockwork-thread-program = { package = "clockwork-thread-program", path = "../programs/thread", version = "=2.0.18" }
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.18" }
clockwork-utils = { path = "../utils", version = "=2.0.18" }
log = "0.4"
pyth-sdk-solana = "0.9.0"
reqwest = "0.11.11"
solana-account-decoder = "=1.17.14"
solana-client = "=1.17.14"
solana-quic-client = "=1.17.14"
solana-geyser-plugin-interface = "=1.17.14"
solana-logger = "=1.17.14"
solana-program = "=1.17.14"
solana-sdk = "=1.17.14"
tokio = "1.18.4"
futures = "0.3.26"
static-pubkey = "1.0.3"

[build-dependencies]
cargo_metadata = "=0.14.0"
rustc_version = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
