[package]
name = "clockwork_plugin"
version.workspace = true
# this needs to match whatever solana uses!
rust-version = "1.60.0"
description = "Clockwork plugin for Solana validators"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "clockwork_plugin"

[dependencies]
anchor-lang.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono = { workspace = true, features = ["alloc"] }
clockwork-cron.workspace = true
clockwork-network-program.workspace = true
clockwork-plugin-utils.workspace = true
clockwork-relayer-api.workspace = true
clockwork-thread-program.workspace = true
clockwork-webhook-program.workspace = true
clockwork-utils.workspace = true
log.workspace = true
pyth-sdk-solana.workspace = true
reqwest.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-quic-client.workspace = true
solana-geyser-plugin-interface.workspace = true
solana-logger.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
futures.workspace = true
static-pubkey.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
rustc_version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
