[package]
name = "sablier_plugin"
version.workspace = true
# this needs to match whatever solana uses!
rust-version = "1.76.0"
description = "Sablier plugin for Solana validators"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "sablier_plugin"

[dependencies]
anchor-lang.workspace = true
async-trait.workspace = true
bincode.workspace = true
chrono = { workspace = true, features = ["alloc"] }
sablier-cron.workspace = true
sablier-network-program = { workspace = true, features = ["no-entrypoint"] }
sablier-plugin-utils.workspace = true
sablier-relayer-api.workspace = true
sablier-thread-program = { workspace = true, features = ["no-entrypoint"] }
sablier-webhook-program = { workspace = true, features = ["no-entrypoint"] }
sablier-utils.workspace = true
log.workspace = true
pyth-solana-receiver-sdk.workspace = true
reqwest.workspace = true
solana-account-decoder.workspace = true
solana-client.workspace = true
solana-quic-client.workspace = true
solana-geyser-plugin-interface.workspace = true
solana-logger.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
futures.workspace = true

[build-dependencies]
cargo_metadata.workspace = true
rustc_version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
