[package]
name = "sablier-relayer"
version.workspace = true
description = "Sablier relayer for webhook requests"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
anchor-lang.workspace = true
sablier-webhook-program.workspace = true
sablier-relayer-api.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-zk-token-sdk.workspace = true
solana-sdk.workspace = true
rayon.workspace = true
regex.workspace = true
