[package]
name = "clockwork-sdk"
version.workspace = true
description = "An SDK for building automated programs on Solana"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
name = "clockwork_sdk"

[dependencies]
anchor-lang.workspace = true
clockwork-thread-program = { workspace = true, features = ["cpi"] }

[features]
default = []
