[package]
name = "sablier-sdk"
version.workspace = true
description = "An SDK for building automated programs on Solana"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
name = "sablier_sdk"

[dependencies]
anchor-lang.workspace = true
sablier-thread-program = { workspace = true, features = ["cpi"] }

[dev-dependencies]
sablier-network-program = { workspace = true, features = ["cpi"] }
litesvm.workspace = true
litesvm-token.workspace = true
solana-sdk.workspace = true

[features]
default = []
