[package]
name = "sablier-utils"
version.workspace = true
description = "Tools for building blocks on Solana"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
name = "sablier_utils"

[dependencies]
anchor-lang.workspace = true
base64.workspace = true
serde = { workspace = true, features = ["derive"] }
static-pubkey.workspace = true
sablier-macros = { path = "./macros" }
pyth-solana-receiver-sdk.workspace = true
