[package]
name = "sablier-utils"
version.workspace = true
description = "Tools for building blocks on Solana"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
name = "sablier_utils"

[dependencies]
anchor-lang.workspace = true
base64.workspace = true
borsh.workspace = true
serde = { workspace = true, features = ["derive"] }
sablier-macros.workspace = true
solana-program.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
