[package]
name = "clockwork-plugin-utils"
version.workspace = true
edition.workspace = true
description = "Clockwork Plugin Utils"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_plugin_utils"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-geyser-plugin-interface.workspace = true
