[package]
name = "sablier-plugin-utils"
version.workspace = true
edition.workspace = true
description = "Sablier Plugin Utils"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sablier_plugin_utils"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-geyser-plugin-interface.workspace = true
