[package]
name = "clockwork-network-program"
version.workspace = true
description = "Clockwork networking protocol"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl = { features = ["mint", "token"], workspace = true }
clockwork-utils.workspace = true
