[package]
name = "sablier-network-program"
version.workspace = true
description = "Sablier networking protocol"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "./README.md"
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sablier_network_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
anchor-spl = { features = ["mint", "token"], workspace = true }
sablier-utils.workspace = true
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
