[package]
name = "clockwork-thread-program"
version.workspace = true
description = "Clockwork thread program"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "clockwork_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
chrono = { workspace = true, features = ["alloc"] }
clockwork-cron.workspace = true
clockwork-network-program = { features = ["cpi"], workspace = true }
clockwork-utils.workspace = true
pyth-sdk-solana.workspace = true
version.workspace = true
