[package]
name = "sablier-thread-program"
version.workspace = true
description = "Sablier thread program"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sablier_thread_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang.workspace = true
chrono = { workspace = true, features = ["alloc"] }
sablier-cron.workspace = true
sablier-network-program = { features = ["cpi"], workspace = true }
sablier-utils.workspace = true
pyth-sdk-solana.workspace = true
version.workspace = true
