[package]
name = "sablier-webhook-program"
version.workspace = true
description = "Sablier webhook program"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sablier_webhook_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { features = ["init-if-needed"], workspace = true }
serde.workspace = true
