[package]
name = "sablier-relayer-api"
version.workspace = true
description = "Sablier relayer for webhook requests"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sablier_relayer_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.3.1"
# byte-unit = "4.0.18"
# curve25519-dalek = "3.2.1"
# lazy_static = "1.4.0"
serde.workspace = true
# shadow-drive-sdk = "0.6.1"
# solana-zk-token-sdk = "=1.14.16"
solana-sdk.workspace = true
# tokio = "1.26.0"
bincode.workspace = true
