[package]
name = "sablier-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
proc-macro2.workspace = true
quote.workspace = true

[dev-dependencies]
sablier-utils.workspace = true
solana-sdk.workspace = true
